# RIF_202507

./: .gitignore  README.md  biomarker_analysis_results.txt  biomarker_frequency_analysis.py  correlation_analysis.ipynb  data_analysis.ipynb  model_performance_summary.md  pyproject.toml
model/: KNN_stability_analysis.py  LDA_QDA_stability_analysis.py  LR_stability_analysis.py  LightGBM_stability_analysis.py  LinearRegression_stability_analysis.py  NB_stability_analysis.py  RandomForest_stability_analysis.py  SVM_stability_analysis.py  XGBoost_stability_analysis.py
report/: comprehensive_analysis_report.md  generate_comprehensive_visualization.py  model_performance_summary.csv
result_num/knn/: complete_stability_data_Y1_20250714_231822.pkl  complete_stability_data_Y2_20250714_231854.pkl  core_biomarkers_Y1_20250714_231822.csv  core_biomarkers_Y2_20250714_231854.csv  distance_metric_analysis_Y1_20250714_231822.csv  distance_metric_analysis_Y2_20250714_231854.csv  feature_stability_Y1_20250714_231822.csv  feature_stability_Y2_20250714_231854.csv  k_value_analysis_Y1_20250714_231822.csv  k_value_analysis_Y2_20250714_231854.csv  knn_analysis_Y1_20250714_231822.csv  knn_analysis_Y2_20250714_231854.csv  knn_report_Y1_20250714_231822.txt  knn_report_Y2_20250714_231854.txt
result_num/lda_qda/: complete_stability_data_Y1_20250714_231539.pkl  complete_stability_data_Y2_20250714_231617.pkl  core_biomarkers_Y1_20250714_231539.csv  feature_stability_Y1_20250714_231539.csv  lda_qda_analysis_Y1_20250714_231539.csv  lda_qda_analysis_Y2_20250714_231617.csv  (+2 more)
(+74 files in other folders)
